--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "3.0.0"
+    "nuxt": "^3.0.0"
   },
   "dependencies": {
     "@mdi/font": "^7.1.96",
