--- a/package.json
+++ b/package.json
@@ -1,26 +1,20 @@
 {
-  "name": "funkier-dice",
-  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@mdi/font": "7.0.96",
-    "pinia": "^2.0.28",
-    "roboto-fontface": "*",
-    "vue": "^3.2.38",
-    "vuetify": "^3.0.0",
-    "webfontloader": "^1.0.0"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@types/node": "^18.11.9",
-    "@types/webfontloader": "^1.6.35",
-    "@vitejs/plugin-vue": "^3.0.3",
-    "typescript": "^4.0.0",
-    "vite": "^3.0.9",
-    "vite-plugin-vuetify": "^1.0.0-alpha.12",
-    "vue-tsc": "^1.0.9"
+    "nuxt": "^3.0.0"
+  },
+  "dependencies": {
+    "@mdi/font": "^7.1.96",
+    "@pinia/nuxt": "^0.4.6",
+    "roboto-fontface": "*",
+    "sass": "^1.57.1",
+    "vuetify": "^3.0.6"
   }
 }
